# learn-opengl-glfw

./: .clang-format  CMakeLists.txt  README.md
src/: Object.h  Shape.h  Window.h  main.cpp  point.frag  point.vert
